tests/baselines/reference/parseUnaryExpressionNoTypeAssertionInJsx3.errors.txt
tests/cases/compiler/index.js(2,13): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
tests/cases/compiler/index.js(2,14): error TS1003: Identifier expected.
tests/cases/compiler/index.js(2,14): error TS2365: Operator '>' cannot be applied to types 'number' and 'string'.


==== tests/cases/compiler/index.js (3 errors) ====
    const x = "oops";
    const y = + <1234> x;
                ~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
                 ~~~~
!!! error TS1003: Identifier expected.
                 ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'string'.
    